teste de commit

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <title>HTML de novo</title>
     </head>
     <body>
-        <h1><b>Questionário</b></h1><br>
+        teste de git
+        <!--<h1><b>Questionário</b></h1><br>
         <b>Questão 1:</b> Explique qual é a função de um servidor web em um ambiente de hospedagem e cite pelo menos um exemplo. <br>
         <b>R:</b> Hospedar páginas estáticas, sem interação com o usuário. Apache
         <hr>
@@ -126,7 +127,7 @@
         <b>R:</b> Escolher bem entre hospedagem local, compartilhada, VPS ou nuvem é importante para garantir que seu site funcione bem e cresça sem problemas.
 
         <hr><br>
-
+    -->
         
 
     </body>
